<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lüftersteuerung"
        android:id="@+id/textView6" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_column="1" />
        </TableRow>
    </TableLayout>

    <Switch
        android:id="@+id/vent_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/vent_manual"
        android:textOff="@string/vent_auto"
        android:showText="true"
        android:layout_column="3"
        android:checked="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_column="1"
                android:layout_width="50dp"
                android:layout_height="30dp" />

        </TableRow>
    </TableLayout>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/power_toggle"
        android:layout_column="3"
        android:checked="false"
        android:visibility="gone"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/vent_on"
                android:id="@+id/vent_on"
                android:layout_column="1"
                android:visibility="visible" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vent_on_value"
                android:layout_column="3"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" °C"
                android:id="@+id/textViewUnit1"
                android:layout_column="4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/vent_off"
                android:id="@+id/vent_off"
                android:layout_column="1"
                android:visibility="visible" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vent_off_value"
                android:layout_column="3"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" °C"
                android:id="@+id/textViewUnit2"
                android:layout_column="4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:layout_column="1" />
        </TableRow>
    </TableLayout>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/save_buttonLuefter"
    android:layout_column="1"
    android:text="@string/button_save"
    android:visibility="visible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/checkInput" />
</LinearLayout>