<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_column="0" />

            <TextView
                android:id="@+id/sunrise"
                android:layout_column="1"
                android:text="@string/sunrise"
                android:visibility="visible" />

            <Space
                android:layout_width="20dp"
                android:layout_height="10dp"
                android:layout_column="0" />

            <TextView
                android:id="@+id/sunrise_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:clickable="true"
                android:onClick="OnClick"
                android:text="@string/time"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Uhr"
                android:id="@+id/textView2"
                android:layout_column="5" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sunset"
                android:layout_column="1"
                android:text="@string/sunset"
                android:visibility="visible" />

            <TextView
                android:id="@+id/sunset_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:clickable="true"
                android:inputType="time"
                android:onClick="OnClick"
                android:text="@string/time"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Uhr"
                android:id="@+id/textView3"
                android:layout_column="5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:layout_column="1" />
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/save_buttonSun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/checkInput" />

</LinearLayout>